# trade

./: .clang-format  .gitignore  .vercelignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  conanfile.txt  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json  vercel.json
.github/workflows/: codegen-check.yml  cpp.yml  deploy-vm.yml  python.yml  web.yml
apps/api/: package.json  tsconfig.json
apps/api/app/api/kill-switch/: route.ts
apps/api/app/api/trading-mode/: route.ts
apps/api/lib/: supabase.ts  venues.ts
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: build-order.md  runbook.md
infra/: docker-compose.vm.yml
infra/cloudrun/: event-matcher.yaml
infra/config/: compliance.yaml.example  strategy.yaml.example
infra/supabase/migrations/: 0001_init.sql
infra/systemd/: trading-stack.service
infra/terraform/: main.tf  outputs.tf  startup.sh  variables.tf
research/: pyproject.toml
research/backtest/: __init__.py  avellaneda_stoikov.py  cost_model.py  fair_value.py  fill_simulator.py  ou_fitter.py  var.py
research/backtest/tests/: test_avellaneda_stoikov.py  test_cost_model.py  test_fair_value.py  test_fill_simulator.py  test_ou_fitter.py  test_var.py
services/cpp/: CMakeLists.txt
services/cpp/common/: CMakeLists.txt
services/cpp/common/include/trade/: fixed_point.hpp
services/cpp/kalshi-connector/: CMakeLists.txt  main.cpp
services/python/kalshi-auth/: kalshi_signer.py  pyproject.toml
services/python/kalshi-auth/kalshi_auth/: __init__.py  signer.py
services/python/kalshi-auth/tests/: test_signer.py
services/python/poly-us-connector/: pyproject.toml
services/python/poly-us-connector/poly_us_connector/: __init__.py  connector.py  executor.py  throttle.py
services/python/poly-us-connector/tests/: test_executor.py  test_throttle.py
tools/codegen/: codegen.sh
