[project]
name = "trade"
version = "0.0.1"
description = "Polymarket US x Kalshi autonomous trading"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0",
  "httpx>=0.27",
  "websockets>=13.0",
  "pydantic>=2.8",
  "numpy>=2.0",
  "scipy>=1.13",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "protobuf>=5.27",
  "nats-py>=2.7",
  "clickhouse-connect>=0.7",
  "anthropic>=0.40",
  "supabase>=2.6",
  "structlog>=24.4",
  "typer>=0.12",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.6",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
]

[tool.uv.workspace]
members = [
  "services/python/kalshi-auth",
  "services/python/poly-us-connector",
  "services/python/event-matcher",
  "services/python/news-ingestor",
  "services/python/signal-pipeline",
  "research",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/python", "research"]
