[project]
name = "research"
version = "0.0.1"
description = "Backtest + math primitives"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.13",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "clickhouse-connect>=0.7",
  "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backtest"]
