[project]
name = "kalshi-auth"
version = "0.0.1"
description = "Kalshi RSA-PSS request signer"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0",
  "httpx>=0.27",
  "typer>=0.12",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kalshi_auth"]
