[project]
name = "poly-us-connector"
version = "0.0.1"
description = "Polymarket US WS + REST bridge to NATS"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "websockets>=13.0",
  "pydantic>=2.8",
  "structlog>=24.4",
  "nats-py>=2.7",
  "typer>=0.12",
  # The official SDK. Installed separately after KYC and key generation:
  # uv pip install polymarket-us
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly_us_connector"]
